--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.15",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-flow": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-preset-react-app": "^10.0.0",
     "babel-runtime": "^6.26.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
@@ -24,10 +31,19 @@
     "react-dom": "16.12.0",
     "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
+    "react-ratio": "^0.1.5",
     "react-script-tag": "^1.1.2",
     "sourcebit": "^0.9.0",
     "sourcebit-source-contentful": "^0.6.4",
     "sourcebit-target-next": "^0.5.2",
-    "sprintf-js": "^1.1.2"
+    "sprintf-js": "^1.1.2",
+    "typescript": "^3.9.7",
+    "@svgr/webpack": "^5.5.0",
+    "@types/classnames": "^2.2.11",
+    "@types/enzyme": "^3.10.8",
+    "@types/jest": "^26.0.16",
+    "@types/node": "^14.14.10",
+    "@types/react": "^16.14.2",
+    "@types/react-test-renderer": "^16.9.4"
   }
 }
