--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-flow": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
+    "@svgr/webpack": "^5.5.0",
+    "@types/classnames": "^2.2.11",
+    "@types/enzyme": "^3.10.8",
+    "@types/jest": "^26.0.16",
+    "@types/node": "^14.14.10",
+    "@types/react": "^16.14.2",
+    "@types/react-test-renderer": "^16.9.4",
+    "algoliasearch": "^4.8.5",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-preset-react-app": "^10.0.0",
@@ -31,19 +39,13 @@
     "react-dom": "16.12.0",
     "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
+    "react-instantsearch-dom": "^6.10.3",
     "react-ratio": "^0.1.5",
     "react-script-tag": "^1.1.2",
     "sourcebit": "^0.9.0",
     "sourcebit-source-contentful": "^0.6.4",
     "sourcebit-target-next": "^0.5.2",
     "sprintf-js": "^1.1.2",
-    "typescript": "^3.9.7",
-    "@svgr/webpack": "^5.5.0",
-    "@types/classnames": "^2.2.11",
-    "@types/enzyme": "^3.10.8",
-    "@types/jest": "^26.0.16",
-    "@types/node": "^14.14.10",
-    "@types/react": "^16.14.2",
-    "@types/react-test-renderer": "^16.9.4"
+    "typescript": "^3.9.7"
   }
 }
